Changes Siguiente on all pages V2

--- a/empleobusca.com/data/buenos_aires/buenos_aires_p17.html
+++ b/empleobusca.com/data/buenos_aires/buenos_aires_p17.html
@@ -4303,11 +4303,11 @@ Zárate, Buenos Aires
 Desde Activos Humanos buscamos para importante constructora un Asistente técnico de obra. Tendrá a su cargo el...
 Hace  2  días</p></div></article>
 <div class="dFlex vm_fx tj_fx mtB">
-<span class="b_primary_inv fwB w48 buildLink cp" data-path="https://ar.computrabajo.com/empleos-en-buenos-aires?p=16" tag="16" title="Anterior">
+<a class="b_primary_inv fwB w48 buildLink cp"  href="buenos_aires_p16.html" tag="16" title="Anterior">
 
                 Anterior
 
-            </span>
+            </a>
 <a class="b_primary w48 buildLink cp"  href="buenos_aires_p18.html" title="Siguiente">
 
                 Siguiente
