--- a/empleobusca.com/data/buenos_aires/buenos_aires_p18.html
+++ b/empleobusca.com/data/buenos_aires/buenos_aires_p18.html
@@ -4339,11 +4339,11 @@ Soporte profesional
 Programa de Diversidad
 Planes de formación</p></div></article>
 <div class="dFlex vm_fx tj_fx mtB">
-<span class="b_primary_inv fwB w48 buildLink cp" data-path="https://ar.computrabajo.com/empleos-en-buenos-aires?p=17" tag="17" title="Anterior">
+<a class="b_primary_inv fwB w48 buildLink cp"  href="buenos_aires_p17.html" tag="17" title="Anterior">
 
                 Anterior
 
-            </span>
+            </a>
 <a class="b_primary w48 buildLink cp"  href="buenos_aires_p19.html" title="Siguiente">
 
                 Siguiente
