--- a/empleobusca.com/data/buenos_aires/buenos_aires_p19.html
+++ b/empleobusca.com/data/buenos_aires/buenos_aires_p19.html
@@ -4290,11 +4290,11 @@ Mar del Plata, Buenos Aires
 Tu misión:  Ejecutar la venta de paqueterio y equipos completos y la cobranza de la sucursal, según los lineamientos...
 Hace  2  días</p></div></article>
 <div class="dFlex vm_fx tj_fx mtB">
-<span class="b_primary_inv fwB w48 buildLink cp" data-path="https://ar.computrabajo.com/empleos-en-buenos-aires?p=18" tag="18" title="Anterior">
+<a class="b_primary_inv fwB w48 buildLink cp"  href="buenos_aires_p18.html" tag="18" title="Anterior">
 
                 Anterior
 
-            </span>
+            </a>
 <a class="b_primary w48 buildLink cp"  href="buenos_aires_p20.html" title="Siguiente">
 
                 Siguiente
