--- a/empleobusca.com/data/buenos_aires/buenos_aires_p23.html
+++ b/empleobusca.com/data/buenos_aires/buenos_aires_p23.html
@@ -4365,11 +4365,11 @@ Escobar, Buenos Aires
 ¡Esta propuesta te puede interesar! Para importante empresa industrial líder en su rubro, ubicada en la zona de...
 Ayer</p></div></article>
 <div class="dFlex vm_fx tj_fx mtB">
-<span class="b_primary_inv fwB w48 buildLink cp" data-path="https://ar.computrabajo.com/empleos-en-buenos-aires?p=22" tag="22" title="Anterior">
+<a class="b_primary_inv fwB w48 buildLink cp"  href="buenos_aires_p22.html" tag="22" title="Anterior">
 
                 Anterior
 
-            </span>
+            </a>
 <a class="b_primary w48 buildLink cp"  href="buenos_aires_p24.html" title="Siguiente">
 
                 Siguiente
