--- a/empleobusca.com/data/buenos_aires/buenos_aires_p24.html
+++ b/empleobusca.com/data/buenos_aires/buenos_aires_p24.html
@@ -4386,11 +4386,11 @@ Pilar, Buenos Aires
 CONA Consultores se encuentra en la búsqueda de 10 peones con experiencia en tareas generales de depósito para...
 Hace  3  días</p></div></article>
 <div class="dFlex vm_fx tj_fx mtB">
-<span class="b_primary_inv fwB w48 buildLink cp" data-path="https://ar.computrabajo.com/empleos-en-buenos-aires?p=23" tag="23" title="Anterior">
+<a class="b_primary_inv fwB w48 buildLink cp"  href="buenos_aires_p23.html" tag="23" title="Anterior">
 
                 Anterior
 
-            </span>
+            </a>
 <a class="b_primary w48 buildLink cp"  href="buenos_aires_p25.html" title="Siguiente">
 
                 Siguiente
