--- a/empleobusca.com/data/buenos_aires/buenos_aires_p25.html
+++ b/empleobusca.com/data/buenos_aires/buenos_aires_p25.html
@@ -4463,11 +4463,11 @@ Martínez, Buenos Aires-GBA
 CONA Consultores se encuentra en la búsqueda de un Técnico Electromecánico para una importante empresa autopartista,...
 Hace  6  días</p></div></article>
 <div class="dFlex vm_fx tj_fx mtB">
-<span class="b_primary_inv fwB w48 buildLink cp" data-path="https://ar.computrabajo.com/empleos-en-buenos-aires?p=24" tag="24" title="Anterior">
+<a class="b_primary_inv fwB w48 buildLink cp"  href="buenos_aires_p24.html" tag="24" title="Anterior">
 
                 Anterior
 
-            </span>
+            </a>
 <a class="b_primary w48 buildLink cp"  href="buenos_aires_p26.html" title="Siguiente">
 
                 Siguiente
