--- a/empleobusca.com/data/buenos_aires/buenos_aires_p26.html
+++ b/empleobusca.com/data/buenos_aires/buenos_aires_p26.html
@@ -4380,11 +4380,11 @@ Mar del Plata, Buenos Aires
 Te interesa formar parte de la estación de servicio mas grande de la provincia? Estamos buscando Cajeros/as que se...
 Hace  5  días</p></div></article>
 <div class="dFlex vm_fx tj_fx mtB">
-<span class="b_primary_inv fwB w48 buildLink cp" data-path="https://ar.computrabajo.com/empleos-en-buenos-aires?p=25" tag="25" title="Anterior">
+<a class="b_primary_inv fwB w48 buildLink cp"  href="buenos_aires_p25.html" tag="25" title="Anterior">
 
                 Anterior
 
-            </span>
+            </a>
 <a class="b_primary w48 buildLink cp"  href="buenos_aires_p27.html" title="Siguiente">
 
                 Siguiente
