--- a/empleobusca.com/data/buenos_aires/buenos_aires_p28.html
+++ b/empleobusca.com/data/buenos_aires/buenos_aires_p28.html
@@ -4335,11 +4335,11 @@ Garín, Buenos Aires
 En PULLMEN nos dedicamos al servicio personalizado de búsqueda, reclutamiento y selección de personal para puestos...
 Ayer</p></div></article>
 <div class="dFlex vm_fx tj_fx mtB">
-<span class="b_primary_inv fwB w48 buildLink cp" data-path="https://ar.computrabajo.com/empleos-en-buenos-aires?p=27" tag="27" title="Anterior">
+<a class="b_primary_inv fwB w48 buildLink cp"  href="buenos_aires_p27.html" tag="27" title="Anterior">
 
                 Anterior
 
-            </span>
+            </a>
 <a class="b_primary w48 buildLink cp"  href="buenos_aires_p29.html" title="Siguiente">
 
                 Siguiente
