--- a/empleobusca.com/data/buenos_aires/buenos_aires_p3.html
+++ b/empleobusca.com/data/buenos_aires/buenos_aires_p3.html
@@ -4313,11 +4313,11 @@ La Plata, Buenos Aires
 Importante cadena de supermercados incorpora personal eventual para CyberMonday Nos encontramos en la búsqueda de...
 Hace  7  días</p></div></article>
 <div class="dFlex vm_fx tj_fx mtB">
-<span class="b_primary_inv fwB w48 buildLink cp" data-path="https://ar.computrabajo.com/empleos-en-buenos-aires?p=2" tag="2" title="Anterior">
+<a class="b_primary_inv fwB w48 buildLink cp"  href="buenos_aires_p2.html" tag="2" title="Anterior">
 
                 Anterior
 
-            </span>
+            </a>
 <a class="b_primary w48 buildLink cp"  href="buenos_aires_p4.html" title="Siguiente">
 
                 Siguiente
