--- a/empleobusca.com/data/buenos_aires/buenos_aires_p4.html
+++ b/empleobusca.com/data/buenos_aires/buenos_aires_p4.html
@@ -4386,11 +4386,11 @@ Mar del Plata, Buenos Aires
 En cadena de sucursales dedicadas al consumo masivo, nos encontramos en la búsqueda de un cajero, para una de las...
 Hace  2  días</p></div></article>
 <div class="dFlex vm_fx tj_fx mtB">
-<span class="b_primary_inv fwB w48 buildLink cp" data-path="https://ar.computrabajo.com/empleos-en-buenos-aires?p=3" tag="3" title="Anterior">
+<a class="b_primary_inv fwB w48 buildLink cp"  href="buenos_aires_p3.html" tag="3" title="Anterior">
 
                 Anterior
 
-            </span>
+            </a>
 <a class="b_primary w48 buildLink cp"  href="buenos_aires_p5.html" title="Siguiente">
 
                 Siguiente
