--- a/empleobusca.com/data/buenos_aires/buenos_aires_p5.html
+++ b/empleobusca.com/data/buenos_aires/buenos_aires_p5.html
@@ -4238,11 +4238,11 @@ Núñez, Capital Federal
 Objetivo del Puesto:  Contribuir al éxito de los proyectos de la empresa mediante el análisis, diseño y documentación...
 Ayer</p></div></article>
 <div class="dFlex vm_fx tj_fx mtB">
-<span class="b_primary_inv fwB w48 buildLink cp" data-path="https://ar.computrabajo.com/empleos-en-buenos-aires?p=4" tag="4" title="Anterior">
+<a class="b_primary_inv fwB w48 buildLink cp"  href="buenos_aires_p4.html" tag="4" title="Anterior">
 
                 Anterior
 
-            </span>
+            </a>
 <a class="b_primary w48 buildLink cp"  href="buenos_aires_p6.html" title="Siguiente">
 
                 Siguiente
