--- a/empleobusca.com/data/buenos_aires/buenos_aires_p7.html
+++ b/empleobusca.com/data/buenos_aires/buenos_aires_p7.html
@@ -4274,11 +4274,11 @@ Pilar, Buenos Aires
 GALANTE D´ANTONIO, concesionario Oficial RENAULT, N°1 en Argentina con más de 50 años en el rubro automotriz, se...
 Hace  5  días</p></div></article>
 <div class="dFlex vm_fx tj_fx mtB">
-<span class="b_primary_inv fwB w48 buildLink cp" data-path="https://ar.computrabajo.com/empleos-en-buenos-aires?p=6" tag="6" title="Anterior">
+<a class="b_primary_inv fwB w48 buildLink cp"  href="buenos_aires_p6.html" tag="6" title="Anterior">
 
                 Anterior
 
-            </span>
+            </a>
 <a class="b_primary w48 buildLink cp"  href="buenos_aires_p8.html" title="Siguiente">
 
                 Siguiente
