--- a/empleobusca.com/data/cordoba/cordoba_p12.html
+++ b/empleobusca.com/data/cordoba/cordoba_p12.html
@@ -4236,11 +4236,11 @@ Villa Carlos Paz, Córdoba
 En Vespasiani Automotores S.A. ¡Estamos en busca de talentosos Asesores Comerciales! Estamos buscando profesionales...
 Hace  7  días</p></div></article>
 <div class="dFlex vm_fx tj_fx mtB">
-<span class="b_primary_inv fwB w48 buildLink cp" data-path="https://ar.computrabajo.com/empleos-en-cordoba?p=11" tag="11" title="Anterior">
+<a class="b_primary_inv fwB w48 buildLink cp"  href="cordoba_p11.html" tag="11" title="Anterior">
 
                 Anterior
 
-            </span>
+            </a>
 <a class="b_primary w48 buildLink cp"  href="cordoba_p13.html" title="Siguiente">
 
                 Siguiente
