--- a/empleobusca.com/data/cordoba/cordoba_p17.html
+++ b/empleobusca.com/data/cordoba/cordoba_p17.html
@@ -4280,11 +4280,11 @@ Córdoba, Córdoba
 En ADN – Recursos Humanos estamos en la búsqueda de Vendedor de Salón rubro componentes electrónicos. Lugar de...
 Hace  6  minutos</p></div></article>
 <div class="dFlex vm_fx tj_fx mtB">
-<span class="b_primary_inv fwB w48 buildLink cp" data-path="https://ar.computrabajo.com/empleos-en-cordoba?p=16" tag="16" title="Anterior">
+<a class="b_primary_inv fwB w48 buildLink cp"  href="cordoba_p16.html" tag="16" title="Anterior">
 
                 Anterior
 
-            </span>
+            </a>
 <a class="b_primary w48 buildLink cp"  href="cordoba_p18.html" title="Siguiente">
 
                 Siguiente
