--- a/empleobusca.com/data/cordoba/cordoba_p18.html
+++ b/empleobusca.com/data/cordoba/cordoba_p18.html
@@ -4190,11 +4190,11 @@ El Sanatorio Allende fue fundado en 1938 por el Profesor Dr. Guillermo Allende c
 El Sanatorio Allende fue fundado en 1938 por el Profesor Dr. Guillermo Allende con el objetivo de ofrecer en Córdoba, un servicio médico de alta jerarquía profesional dentro de una máxima prestación de servicio. A partir de entonces, convencidos y comprometidos con esta filosofía de trabajo, el Sanatorio fue creciendo paso a paso, incorporando nuevas tecnologías, equipamiento, infraestructura y modernos servicios acompañando el avance y la especialización de las ciencias de la salud. Hoy cuenta con 300 camas de internación general a las que se suman 31 de Terapia Intensiva y 12 de Unidad Coronaria, 27 de Terapia Neonatal y 6 de Terapia Pediátrica. Además cuenta con un hospital de día con 34 camas, y una Sala de Quimioterapia ambulatoria para 6 personas. Ofrece, además, los servicios de 150 consultorios externos, cubriendo todas las especialidades médicas y auxiliares, con un importante desarrollo científico y tecnológico con aplicación de modernos métodos de diagnóstico y tratamiento. El plantel de personal está compuesto por 500 médicos, 170 residentes y 1155 empleados.
 Ver más sobre la empresa</p></div></article>
 <div class="dFlex vm_fx tj_fx mtB">
-<span class="b_primary_inv fwB w48 buildLink cp" data-path="https://ar.computrabajo.com/empleos-en-cordoba?p=17" tag="17" title="Anterior">
+<a class="b_primary_inv fwB w48 buildLink cp"  href="cordoba_p17.html" tag="17" title="Anterior">
 
                 Anterior
 
-            </span>
+            </a>
 <a class="b_primary w48 buildLink cp"  href="cordoba_p19.html" title="Siguiente">
 
                 Siguiente
