--- a/empleobusca.com/data/cordoba/cordoba_p26.html
+++ b/empleobusca.com/data/cordoba/cordoba_p26.html
@@ -4286,11 +4286,11 @@ Córdoba, Córdoba
 Conocimiento en: Plomería Electricidad Albañilería Reparaciones en general Disponibilidad para ir a las sucursales y...
 Más de 30 días</p></div></article>
 <div class="dFlex vm_fx tj_fx mtB">
-<span class="b_primary_inv fwB w48 buildLink cp" data-path="https://ar.computrabajo.com/empleos-en-cordoba?p=25" tag="25" title="Anterior">
+<a class="b_primary_inv fwB w48 buildLink cp"  href="cordoba_p25.html" tag="25" title="Anterior">
 
                 Anterior
 
-            </span>
+            </a>
 <a class="b_primary w48 buildLink cp"  href="cordoba_p27.html" title="Siguiente">
 
                 Siguiente
