--- a/empleobusca.com/data/cordoba/cordoba_p29.html
+++ b/empleobusca.com/data/cordoba/cordoba_p29.html
@@ -4255,11 +4255,11 @@ Alta Gracia, Córdoba
 Nos encontramos en la búsqueda de un/a Facturista Médico/a con experiencia comprobable, para incorporarse al equipo de...
 17 de noviembre</p></div></article>
 <div class="dFlex vm_fx tj_fx mtB">
-<span class="b_primary_inv fwB w48 buildLink cp" data-path="https://ar.computrabajo.com/empleos-en-cordoba?p=28" tag="28" title="Anterior">
+<a class="b_primary_inv fwB w48 buildLink cp"  href="cordoba_p28.html" tag="28" title="Anterior">
 
                 Anterior
 
-            </span>
+            </a>
 <a class="b_primary w48 buildLink cp"  href="cordoba_p30.html" title="Siguiente">
 
                 Siguiente
