--- a/empleobusca.com/data/cordoba/cordoba_p3.html
+++ b/empleobusca.com/data/cordoba/cordoba_p3.html
@@ -4188,11 +4188,11 @@ Córdoba, Córdoba
 Buscamos Operario de limpieza de tapizados para sumar al equipo de Reconocida Empresa de Servicios de limpieza. Las...
 Hace  2  días</p></div></article>
 <div class="dFlex vm_fx tj_fx mtB">
-<span class="b_primary_inv fwB w48 buildLink cp" data-path="https://ar.computrabajo.com/empleos-en-cordoba?p=2" tag="2" title="Anterior">
+<a class="b_primary_inv fwB w48 buildLink cp"  href="cordoba_p2.html" tag="2" title="Anterior">
 
                 Anterior
 
-            </span>
+            </a>
 <a class="b_primary w48 buildLink cp"  href="cordoba_p4.html" title="Siguiente">
 
                 Siguiente
