--- a/empleobusca.com/data/cordoba/cordoba_p30.html
+++ b/empleobusca.com/data/cordoba/cordoba_p30.html
@@ -4133,11 +4133,11 @@ Córdoba, Córdoba
 Distribuidor Oficial Arcor-Bagley de la ciudad de Córdoba requiere Vendedor de Consumo Masivo, para atender una...
 Hace  2  días</p></div></article>
 <div class="dFlex vm_fx tj_fx mtB">
-<span class="b_primary_inv fwB w48 buildLink cp" data-path="https://ar.computrabajo.com/empleos-en-cordoba?p=29" tag="29" title="Anterior">
+<a class="b_primary_inv fwB w48 buildLink cp"  href="cordoba_p29.html" tag="29" title="Anterior">
 
                 Anterior
 
-            </span>
+            </a>
 <a class="b_primary w48 buildLink cp"  href="cordoba_p31.html" title="Siguiente">
 
                 Siguiente
