--- a/empleobusca.com/data/cordoba/cordoba_p6.html
+++ b/empleobusca.com/data/cordoba/cordoba_p6.html
@@ -4170,11 +4170,11 @@ Córdoba, Córdoba
 Generación de nuevos y potenciales clientes. Convertir en ventas las visitas generadas. Identificar, visitar y activar...
 17 de noviembre</p></div></article>
 <div class="dFlex vm_fx tj_fx mtB">
-<span class="b_primary_inv fwB w48 buildLink cp" data-path="https://ar.computrabajo.com/empleos-en-cordoba?p=5" tag="5" title="Anterior">
+<a class="b_primary_inv fwB w48 buildLink cp"  href="cordoba_p5.html" tag="5" title="Anterior">
 
                 Anterior
 
-            </span>
+            </a>
 <a class="b_primary w48 buildLink cp"  href="cordoba_p7.html" title="Siguiente">
 
                 Siguiente
