--- a/empleobusca.com/data/mendoza/mendoza_p12.html
+++ b/empleobusca.com/data/mendoza/mendoza_p12.html
@@ -4015,11 +4015,11 @@ Guaymallén, Mendoza
 En Swiss Medical trabajamos cada día para que las personas vivan más y mejor. Más de 4 millones de personas confían en...
 Hace  5  días</p></div></article>
 <div class="dFlex vm_fx tj_fx mtB">
-<span class="b_primary_inv fwB w48 buildLink cp" data-path="https://ar.computrabajo.com/empleos-en-mendoza?p=11" tag="11" title="Anterior">
+<a class="b_primary_inv fwB w48 buildLink cp"  href="mendoza_p11.html" tag="11" title="Anterior">
 
                 Anterior
 
-            </span>
+            </a>
 <a class="b_primary w48 buildLink cp"  href="mendoza_p13.html" title="Siguiente">
 
                 Siguiente
