--- a/empleobusca.com/data/mendoza/mendoza_p17.html
+++ b/empleobusca.com/data/mendoza/mendoza_p17.html
@@ -4051,11 +4051,11 @@ Mendoza, Mendoza
 Spa Sauna para hombres, necesita personal masculino, para trabajo por turnos en la ciudad de Mendoza, preferencia...
 26 de noviembre</p></div></article>
 <div class="dFlex vm_fx tj_fx mtB">
-<span class="b_primary_inv fwB w48 buildLink cp" data-path="https://ar.computrabajo.com/empleos-en-mendoza?p=16" tag="16" title="Anterior">
+<a class="b_primary_inv fwB w48 buildLink cp"  href="mendoza_p16.html" tag="16" title="Anterior">
 
                 Anterior
 
-            </span>
+            </a>
 <a class="b_primary w48 buildLink cp"  href="mendoza_p18.html" title="Siguiente">
 
                 Siguiente
