--- a/empleobusca.com/data/mendoza/mendoza_p18.html
+++ b/empleobusca.com/data/mendoza/mendoza_p18.html
@@ -4042,11 +4042,11 @@ Maipú, Mendoza
 Se busca operarios de bodega para Sector Filtracion Perfil egresado de escuelas técnicas o terciario, técnico...
 Hace  2  días</p></div></article>
 <div class="dFlex vm_fx tj_fx mtB">
-<span class="b_primary_inv fwB w48 buildLink cp" data-path="https://ar.computrabajo.com/empleos-en-mendoza?p=17" tag="17" title="Anterior">
+<a class="b_primary_inv fwB w48 buildLink cp"  href="mendoza_p17.html" tag="17" title="Anterior">
 
                 Anterior
 
-            </span>
+            </a>
 <a class="b_primary w48 buildLink cp"  href="mendoza_p19.html" title="Siguiente">
 
                 Siguiente
