--- a/empleobusca.com/data/mendoza/mendoza_p2.html
+++ b/empleobusca.com/data/mendoza/mendoza_p2.html
@@ -3941,11 +3941,11 @@ Godoy Cruz, Mendoza
 ¡SOMOS NEXO GROUP Y ESTAMOS EN BÚSQUEDA DE TU TALENTO! Si te gustaría formar parte de una empresa sólida, ubicada en...
 Hace  4  días</p></div></article>
 <div class="dFlex vm_fx tj_fx mtB">
-<span class="b_primary_inv fwB w48 buildLink cp" data-path="https://ar.computrabajo.com/empleos-en-mendoza" tag="1" title="Anterior">
+<a class="b_primary_inv fwB w48 buildLink cp"  href="mendoza_p1.html" tag="1" title="Anterior">
 
                 Anterior
 
-            </span>
+            </a>
 <a class="b_primary w48 buildLink cp"  href="mendoza_p3.html" title="Siguiente">
 
                 Siguiente
