--- a/empleobusca.com/data/mendoza/mendoza_p21.html
+++ b/empleobusca.com/data/mendoza/mendoza_p21.html
@@ -3976,11 +3976,11 @@ Mendoza, Mendoza
 Funciones principales: Instalación y reparación de dispositivos GPS. Instalación de sensores vehiculares: apertura de...
 Hace  5  días</p></div></article>
 <div class="dFlex vm_fx tj_fx mtB">
-<span class="b_primary_inv fwB w48 buildLink cp" data-path="https://ar.computrabajo.com/empleos-en-mendoza?p=20" tag="20" title="Anterior">
+<a class="b_primary_inv fwB w48 buildLink cp"  href="mendoza_p20.html" tag="20" title="Anterior">
 
                 Anterior
 
-            </span>
+            </a>
 <a class="b_primary w48 buildLink cp"  href="mendoza_p22.html" title="Siguiente">
 
                 Siguiente
