--- a/empleobusca.com/data/mendoza/mendoza_p22.html
+++ b/empleobusca.com/data/mendoza/mendoza_p22.html
@@ -4018,11 +4018,11 @@ Mendoza, Mendoza
 empresa multinacional esta en busca de asesores comerciales..se ofrece sueldo fijo .comisiones sin techo ..incentivos...
 Más de 30 días</p></div></article>
 <div class="dFlex vm_fx tj_fx mtB">
-<span class="b_primary_inv fwB w48 buildLink cp" data-path="https://ar.computrabajo.com/empleos-en-mendoza?p=21" tag="21" title="Anterior">
+<a class="b_primary_inv fwB w48 buildLink cp"  href="mendoza_p21.html" tag="21" title="Anterior">
 
                 Anterior
 
-            </span>
+            </a>
 <a class="b_primary w48 buildLink cp"  href="mendoza_p23.html" title="Siguiente">
 
                 Siguiente
