--- a/empleobusca.com/data/mendoza/mendoza_p23.html
+++ b/empleobusca.com/data/mendoza/mendoza_p23.html
@@ -4017,11 +4017,11 @@ Guaymallén, Mendoza
 Importante cadena de supermercados busca incorporar, operarios de producción: Requisitos:...
 18 de noviembre</p></div></article>
 <div class="dFlex vm_fx tj_fx mtB">
-<span class="b_primary_inv fwB w48 buildLink cp" data-path="https://ar.computrabajo.com/empleos-en-mendoza?p=22" tag="22" title="Anterior">
+<a class="b_primary_inv fwB w48 buildLink cp"  href="mendoza_p22.html" tag="22" title="Anterior">
 
                 Anterior
 
-            </span>
+            </a>
 <a class="b_primary w48 buildLink cp"  href="mendoza_p24.html" title="Siguiente">
 
                 Siguiente
