--- a/empleobusca.com/data/mendoza/mendoza_p24.html
+++ b/empleobusca.com/data/mendoza/mendoza_p24.html
@@ -2031,11 +2031,11 @@ San Rafael, Mendoza
 ¿Querés ser parte de una de las mejores empresas para trabajar de Argentina? En Verisure Argentina contamos con la...
 Hace  5  horas</p></div></article>
 <div class="dFlex vm_fx tj_fx mtB">
-<span class="b_primary_inv fwB w48 buildLink cp" data-path="https://ar.computrabajo.com/empleos-en-mendoza?p=23" tag="23" title="Anterior">
+<a class="b_primary_inv fwB w48 buildLink cp"  href="mendoza_p23.html" tag="23" title="Anterior">
 
                 Anterior
 
-            </span>
+            </a>
 <span class="b_primary w48 disabled cp">
 
                 Siguiente
