--- a/empleobusca.com/data/mendoza/mendoza_p3.html
+++ b/empleobusca.com/data/mendoza/mendoza_p3.html
@@ -4113,11 +4113,11 @@ Godoy Cruz, Mendoza
 Desde Ceta Capital Humano nos encontramos en la búsqueda de Operarios de Depósito (eventual) para incorporarse a  import...
 Ayer</p></div></article>
 <div class="dFlex vm_fx tj_fx mtB">
-<span class="b_primary_inv fwB w48 buildLink cp" data-path="https://ar.computrabajo.com/empleos-en-mendoza?p=2" tag="2" title="Anterior">
+<a class="b_primary_inv fwB w48 buildLink cp"  href="mendoza_p2.html" tag="2" title="Anterior">
 
                 Anterior
 
-            </span>
+            </a>
 <a class="b_primary w48 buildLink cp"  href="mendoza_p4.html" title="Siguiente">
 
                 Siguiente
