--- a/empleobusca.com/data/mendoza/mendoza_p4.html
+++ b/empleobusca.com/data/mendoza/mendoza_p4.html
@@ -4119,11 +4119,11 @@ Maipú, Mendoza
 Nos encontramos en la búsqueda de personal para la vacante  TÉCNICO EN MANTENIMIENTO para importante empresa en Maipú....
 Hace  23  horas</p></div></article>
 <div class="dFlex vm_fx tj_fx mtB">
-<span class="b_primary_inv fwB w48 buildLink cp" data-path="https://ar.computrabajo.com/empleos-en-mendoza?p=3" tag="3" title="Anterior">
+<a class="b_primary_inv fwB w48 buildLink cp"  href="mendoza_p3.html" tag="3" title="Anterior">
 
                 Anterior
 
-            </span>
+            </a>
 <a class="b_primary w48 buildLink cp"  href="mendoza_p5.html" title="Siguiente">
 
                 Siguiente
