--- a/empleobusca.com/data/mendoza/mendoza_p5.html
+++ b/empleobusca.com/data/mendoza/mendoza_p5.html
@@ -4033,11 +4033,11 @@ Godoy Cruz, Mendoza
 ¡Hola! En Consultores de Empresas estamos en búsqueda de personas apasionadas y orientadas al cliente para sumarse...
 Ayer</p></div></article>
 <div class="dFlex vm_fx tj_fx mtB">
-<span class="b_primary_inv fwB w48 buildLink cp" data-path="https://ar.computrabajo.com/empleos-en-mendoza?p=4" tag="4" title="Anterior">
+<a class="b_primary_inv fwB w48 buildLink cp"  href="mendoza_p4.html" tag="4" title="Anterior">
 
                 Anterior
 
-            </span>
+            </a>
 <a class="b_primary w48 buildLink cp"  href="mendoza_p6.html" title="Siguiente">
 
                 Siguiente
