--- a/empleobusca.com/data/mendoza/mendoza_p6.html
+++ b/empleobusca.com/data/mendoza/mendoza_p6.html
@@ -3997,11 +3997,11 @@ Maipú, Mendoza
 Nos encontramos en la búsqueda de personal para la vacante  TÉCNICO EN MANTENIMIENTO ELÉCTRICO para importante empresa...
 Ayer</p></div></article>
 <div class="dFlex vm_fx tj_fx mtB">
-<span class="b_primary_inv fwB w48 buildLink cp" data-path="https://ar.computrabajo.com/empleos-en-mendoza?p=5" tag="5" title="Anterior">
+<a class="b_primary_inv fwB w48 buildLink cp"  href="mendoza_p5.html" tag="5" title="Anterior">
 
                 Anterior
 
-            </span>
+            </a>
 <a class="b_primary w48 buildLink cp"  href="mendoza_p7.html" title="Siguiente">
 
                 Siguiente
