--- a/empleobusca.com/data/buenos_aires/buenos_aires_p10.html
+++ b/empleobusca.com/data/buenos_aires/buenos_aires_p10.html
@@ -4355,11 +4355,11 @@ Escobar, Buenos Aires
 ¡Esta propuesta te puede interesar! Importante empresa de la zona de Escobar, se encuentra en la busqueda de operarios...
 Ayer</p></div></article>
 <div class="dFlex vm_fx tj_fx mtB">
-<span class="b_primary_inv fwB w48 buildLink cp" data-path="https://ar.computrabajo.com/empleos-en-buenos-aires?p=9" tag="9" title="Anterior">
+<a class="b_primary_inv fwB w48 buildLink cp"  href="buenos_aires_p9.html" tag="9" title="Anterior">
 
                 Anterior
 
-            </span>
+            </a>
 <a class="b_primary w48 buildLink cp"  href="buenos_aires_p11.html" title="Siguiente">
 
                 Siguiente
