--- a/empleobusca.com/data/buenos_aires/buenos_aires_p11.html
+++ b/empleobusca.com/data/buenos_aires/buenos_aires_p11.html
@@ -4287,11 +4287,11 @@ San Martín, Buenos Aires-GBA
 Empresa de servicios incorporará Supervisor de Mantenimiento de planta de producción. Orientamos la búsqueda a...
 Hace  5  horas</p></div></article>
 <div class="dFlex vm_fx tj_fx mtB">
-<span class="b_primary_inv fwB w48 buildLink cp" data-path="https://ar.computrabajo.com/empleos-en-buenos-aires?p=10" tag="10" title="Anterior">
+<a class="b_primary_inv fwB w48 buildLink cp"  href="buenos_aires_p10.html" tag="10" title="Anterior">
 
                 Anterior
 
-            </span>
+            </a>
 <a class="b_primary w48 buildLink cp"  href="buenos_aires_p12.html" title="Siguiente">
 
                 Siguiente
