--- a/empleobusca.com/data/buenos_aires/buenos_aires_p15.html
+++ b/empleobusca.com/data/buenos_aires/buenos_aires_p15.html
@@ -4207,11 +4207,11 @@ Denunciar empleo
 Gracias por ayudarnos a mejorar Computrabajo
 Nos tomamos muy en serio tus comentarios y lo revisaremos lo antes posible.</p></div></article>
 <div class="dFlex vm_fx tj_fx mtB">
-<span class="b_primary_inv fwB w48 buildLink cp" data-path="https://ar.computrabajo.com/empleos-en-buenos-aires?p=14" tag="14" title="Anterior">
+<a class="b_primary_inv fwB w48 buildLink cp"  href="buenos_aires_p14.html" tag="14" title="Anterior">
 
                 Anterior
 
-            </span>
+            </a>
 <a class="b_primary w48 buildLink cp"  href="buenos_aires_p16.html" title="Siguiente">
 
                 Siguiente
