--- a/empleobusca.com/data/buenos_aires/buenos_aires_p30.html
+++ b/empleobusca.com/data/buenos_aires/buenos_aires_p30.html
@@ -4233,11 +4233,11 @@ Denunciar empleo
 Gracias por ayudarnos a mejorar Computrabajo
 Nos tomamos muy en serio tus comentarios y lo revisaremos lo antes posible.</p></div></article>
 <div class="dFlex vm_fx tj_fx mtB">
-<span class="b_primary_inv fwB w48 buildLink cp" data-path="https://ar.computrabajo.com/empleos-en-buenos-aires?p=29" tag="29" title="Anterior">
+<a class="b_primary_inv fwB w48 buildLink cp"  href="buenos_aires_p29.html" tag="29" title="Anterior">
 
                 Anterior
 
-            </span>
+            </a>
 <a class="b_primary w48 buildLink cp"  href="buenos_aires_p31.html" title="Siguiente">
 
                 Siguiente
