--- a/empleobusca.com/data/buenos_aires/buenos_aires_p6.html
+++ b/empleobusca.com/data/buenos_aires/buenos_aires_p6.html
@@ -4281,11 +4281,11 @@ Denunciar empleo
 Gracias por ayudarnos a mejorar Computrabajo
 Nos tomamos muy en serio tus comentarios y lo revisaremos lo antes posible.</p></div></article>
 <div class="dFlex vm_fx tj_fx mtB">
-<span class="b_primary_inv fwB w48 buildLink cp" data-path="https://ar.computrabajo.com/empleos-en-buenos-aires?p=5" tag="5" title="Anterior">
+<a class="b_primary_inv fwB w48 buildLink cp"  href="buenos_aires_p5.html" tag="5" title="Anterior">
 
                 Anterior
 
-            </span>
+            </a>
 <a class="b_primary w48 buildLink cp"  href="buenos_aires_p7.html" title="Siguiente">
 
                 Siguiente
