--- a/empleobusca.com/data/buenos_aires/buenos_aires_p9.html
+++ b/empleobusca.com/data/buenos_aires/buenos_aires_p9.html
@@ -4343,11 +4343,11 @@ Mar del Plata, Buenos Aires
 Buscamos incorporar personal a nuestro equipo de trabajo OPERARIOS Y MAQUINISTAS. La búsqueda se orienta hacia...
 Hace  2  días</p></div></article>
 <div class="dFlex vm_fx tj_fx mtB">
-<span class="b_primary_inv fwB w48 buildLink cp" data-path="https://ar.computrabajo.com/empleos-en-buenos-aires?p=8" tag="8" title="Anterior">
+<a class="b_primary_inv fwB w48 buildLink cp"  href="buenos_aires_p8.html" tag="8" title="Anterior">
 
                 Anterior
 
-            </span>
+            </a>
 <a class="b_primary w48 buildLink cp"  href="buenos_aires_p10.html" title="Siguiente">
 
                 Siguiente
