--- a/empleobusca.com/data/cordoba/cordoba_p10.html
+++ b/empleobusca.com/data/cordoba/cordoba_p10.html
@@ -4188,11 +4188,11 @@ Denunciar empleo
 Gracias por ayudarnos a mejorar Computrabajo
 Nos tomamos muy en serio tus comentarios y lo revisaremos lo antes posible.</p></div></article>
 <div class="dFlex vm_fx tj_fx mtB">
-<span class="b_primary_inv fwB w48 buildLink cp" data-path="https://ar.computrabajo.com/empleos-en-cordoba?p=9" tag="9" title="Anterior">
+<a class="b_primary_inv fwB w48 buildLink cp"  href="cordoba_p9.html" tag="9" title="Anterior">
 
                 Anterior
 
-            </span>
+            </a>
 <a class="b_primary w48 buildLink cp"  href="cordoba_p11.html" title="Siguiente">
 
                 Siguiente
