--- a/empleobusca.com/data/cordoba/cordoba_p11.html
+++ b/empleobusca.com/data/cordoba/cordoba_p11.html
@@ -4203,11 +4203,11 @@ Córdoba, Córdoba
 Desde CETA CH nos encontramos en la búsqueda de Representante de Ventas para importante Call Center situado en zona...
 Hace  3  días</p></div></article>
 <div class="dFlex vm_fx tj_fx mtB">
-<span class="b_primary_inv fwB w48 buildLink cp" data-path="https://ar.computrabajo.com/empleos-en-cordoba?p=10" tag="10" title="Anterior">
+<a class="b_primary_inv fwB w48 buildLink cp"  href="cordoba_p10.html" tag="10" title="Anterior">
 
                 Anterior
 
-            </span>
+            </a>
 <a class="b_primary w48 buildLink cp"  href="cordoba_p12.html" title="Siguiente">
 
                 Siguiente
