--- a/empleobusca.com/data/cordoba/cordoba_p14.html
+++ b/empleobusca.com/data/cordoba/cordoba_p14.html
@@ -4250,11 +4250,11 @@ Córdoba, Córdoba
 Algunas de las tareas son: Operar tornos, fresadoras y otros equipos industriales. Realizar conformado y ensamblado de...
 Hace  4  días</p></div></article>
 <div class="dFlex vm_fx tj_fx mtB">
-<span class="b_primary_inv fwB w48 buildLink cp" data-path="https://ar.computrabajo.com/empleos-en-cordoba?p=13" tag="13" title="Anterior">
+<a class="b_primary_inv fwB w48 buildLink cp"  href="cordoba_p13.html" tag="13" title="Anterior">
 
                 Anterior
 
-            </span>
+            </a>
 <a class="b_primary w48 buildLink cp"  href="cordoba_p15.html" title="Siguiente">
 
                 Siguiente
