--- a/empleobusca.com/data/cordoba/cordoba_p15.html
+++ b/empleobusca.com/data/cordoba/cordoba_p15.html
@@ -4196,11 +4196,11 @@ Denunciar empleo
 Gracias por ayudarnos a mejorar Computrabajo
 Nos tomamos muy en serio tus comentarios y lo revisaremos lo antes posible.</p></div></article>
 <div class="dFlex vm_fx tj_fx mtB">
-<span class="b_primary_inv fwB w48 buildLink cp" data-path="https://ar.computrabajo.com/empleos-en-cordoba?p=14" tag="14" title="Anterior">
+<a class="b_primary_inv fwB w48 buildLink cp"  href="cordoba_p14.html" tag="14" title="Anterior">
 
                 Anterior
 
-            </span>
+            </a>
 <a class="b_primary w48 buildLink cp"  href="cordoba_p16.html" title="Siguiente">
 
                 Siguiente
