--- a/empleobusca.com/data/cordoba/cordoba_p20.html
+++ b/empleobusca.com/data/cordoba/cordoba_p20.html
@@ -4195,11 +4195,11 @@ Desde Hospital Privado, nos encontramos en la búsqueda de Secretarios/as para i
 Valoramos a...
 Ayer</p></div></article>
 <div class="dFlex vm_fx tj_fx mtB">
-<span class="b_primary_inv fwB w48 buildLink cp" data-path="https://ar.computrabajo.com/empleos-en-cordoba?p=19" tag="19" title="Anterior">
+<a class="b_primary_inv fwB w48 buildLink cp"  href="cordoba_p19.html" tag="19" title="Anterior">
 
                 Anterior
 
-            </span>
+            </a>
 <a class="b_primary w48 buildLink cp"  href="cordoba_p21.html" title="Siguiente">
 
                 Siguiente
