--- a/empleobusca.com/data/cordoba/cordoba_p21.html
+++ b/empleobusca.com/data/cordoba/cordoba_p21.html
@@ -4134,11 +4134,11 @@ Córdoba, Córdoba
 Seleccionamos Farmacéutico/a Auxiliarpara Farmacia Interna de Importante Sanatorio Privado.   PRINCIPALES FUNCIONES: -...
 Hace  7  días</p></div></article>
 <div class="dFlex vm_fx tj_fx mtB">
-<span class="b_primary_inv fwB w48 buildLink cp" data-path="https://ar.computrabajo.com/empleos-en-cordoba?p=20" tag="20" title="Anterior">
+<a class="b_primary_inv fwB w48 buildLink cp"  href="cordoba_p20.html" tag="20" title="Anterior">
 
                 Anterior
 
-            </span>
+            </a>
 <a class="b_primary w48 buildLink cp"  href="cordoba_p22.html" title="Siguiente">
 
                 Siguiente
