--- a/empleobusca.com/data/cordoba/cordoba_p24.html
+++ b/empleobusca.com/data/cordoba/cordoba_p24.html
@@ -4282,11 +4282,11 @@ Denunciar empleo
 Gracias por ayudarnos a mejorar Computrabajo
 Nos tomamos muy en serio tus comentarios y lo revisaremos lo antes posible.</p></div></article>
 <div class="dFlex vm_fx tj_fx mtB">
-<span class="b_primary_inv fwB w48 buildLink cp" data-path="https://ar.computrabajo.com/empleos-en-cordoba?p=23" tag="23" title="Anterior">
+<a class="b_primary_inv fwB w48 buildLink cp"  href="cordoba_p23.html" tag="23" title="Anterior">
 
                 Anterior
 
-            </span>
+            </a>
 <a class="b_primary w48 buildLink cp"  href="cordoba_p25.html" title="Siguiente">
 
                 Siguiente
