--- a/empleobusca.com/data/cordoba/cordoba_p28.html
+++ b/empleobusca.com/data/cordoba/cordoba_p28.html
@@ -4260,11 +4260,11 @@ Denunciar empleo
 Gracias por ayudarnos a mejorar Computrabajo
 Nos tomamos muy en serio tus comentarios y lo revisaremos lo antes posible.</p></div></article>
 <div class="dFlex vm_fx tj_fx mtB">
-<span class="b_primary_inv fwB w48 buildLink cp" data-path="https://ar.computrabajo.com/empleos-en-cordoba?p=27" tag="27" title="Anterior">
+<a class="b_primary_inv fwB w48 buildLink cp"  href="cordoba_p27.html" tag="27" title="Anterior">
 
                 Anterior
 
-            </span>
+            </a>
 <a class="b_primary w48 buildLink cp"  href="cordoba_p29.html" title="Siguiente">
 
                 Siguiente
