--- a/empleobusca.com/data/cordoba/cordoba_p7.html
+++ b/empleobusca.com/data/cordoba/cordoba_p7.html
@@ -4109,11 +4109,11 @@ Denunciar empleo
 Gracias por ayudarnos a mejorar Computrabajo
 Nos tomamos muy en serio tus comentarios y lo revisaremos lo antes posible.</p></div></article>
 <div class="dFlex vm_fx tj_fx mtB">
-<span class="b_primary_inv fwB w48 buildLink cp" data-path="https://ar.computrabajo.com/empleos-en-cordoba?p=6" tag="6" title="Anterior">
+<a class="b_primary_inv fwB w48 buildLink cp"  href="cordoba_p6.html" tag="6" title="Anterior">
 
                 Anterior
 
-            </span>
+            </a>
 <a class="b_primary w48 buildLink cp"  href="cordoba_p8.html" title="Siguiente">
 
                 Siguiente
