--- a/empleobusca.com/data/cordoba/cordoba_p8.html
+++ b/empleobusca.com/data/cordoba/cordoba_p8.html
@@ -4130,11 +4130,11 @@ Denunciar empleo
 Gracias por ayudarnos a mejorar Computrabajo
 Nos tomamos muy en serio tus comentarios y lo revisaremos lo antes posible.</p></div></article>
 <div class="dFlex vm_fx tj_fx mtB">
-<span class="b_primary_inv fwB w48 buildLink cp" data-path="https://ar.computrabajo.com/empleos-en-cordoba?p=7" tag="7" title="Anterior">
+<a class="b_primary_inv fwB w48 buildLink cp"  href="cordoba_p7.html" tag="7" title="Anterior">
 
                 Anterior
 
-            </span>
+            </a>
 <a class="b_primary w48 buildLink cp"  href="cordoba_p9.html" title="Siguiente">
 
                 Siguiente
