--- a/empleobusca.com/data/mendoza/mendoza_p11.html
+++ b/empleobusca.com/data/mendoza/mendoza_p11.html
@@ -4041,11 +4041,11 @@ Maipú, Mendoza
 Se busca operarios de bodega para Sector Filtracion Perfil egresado de escuelas técnicas o terciario, técnico...
 Hace  2  días</p></div></article>
 <div class="dFlex vm_fx tj_fx mtB">
-<span class="b_primary_inv fwB w48 buildLink cp" data-path="https://ar.computrabajo.com/empleos-en-mendoza?p=10" tag="10" title="Anterior">
+<a class="b_primary_inv fwB w48 buildLink cp"  href="mendoza_p10.html" tag="10" title="Anterior">
 
                 Anterior
 
-            </span>
+            </a>
 <a class="b_primary w48 buildLink cp"  href="mendoza_p12.html" title="Siguiente">
 
                 Siguiente
