--- a/empleobusca.com/data/mendoza/mendoza_p19.html
+++ b/empleobusca.com/data/mendoza/mendoza_p19.html
@@ -3985,11 +3985,11 @@ Córdoba, Córdoba
 SOMO NEXO GROUP ¡Y ESTAMOS EN BUSQUEDA DE TU TALENTO! Si te interesa ser Coordinador de Obrasy formar parte del equipo...
 Hace  5  días</p></div></article>
 <div class="dFlex vm_fx tj_fx mtB">
-<span class="b_primary_inv fwB w48 buildLink cp" data-path="https://ar.computrabajo.com/empleos-en-mendoza?p=18" tag="18" title="Anterior">
+<a class="b_primary_inv fwB w48 buildLink cp"  href="mendoza_p18.html" tag="18" title="Anterior">
 
                 Anterior
 
-            </span>
+            </a>
 <a class="b_primary w48 buildLink cp"  href="mendoza_p20.html" title="Siguiente">
 
                 Siguiente
