--- a/empleobusca.com/data/mendoza/mendoza_p20.html
+++ b/empleobusca.com/data/mendoza/mendoza_p20.html
@@ -3998,11 +3998,11 @@ Denunciar empleo
 Gracias por ayudarnos a mejorar Computrabajo
 Nos tomamos muy en serio tus comentarios y lo revisaremos lo antes posible.</p></div></article>
 <div class="dFlex vm_fx tj_fx mtB">
-<span class="b_primary_inv fwB w48 buildLink cp" data-path="https://ar.computrabajo.com/empleos-en-mendoza?p=19" tag="19" title="Anterior">
+<a class="b_primary_inv fwB w48 buildLink cp"  href="mendoza_p19.html" tag="19" title="Anterior">
 
                 Anterior
 
-            </span>
+            </a>
 <a class="b_primary w48 buildLink cp"  href="mendoza_p21.html" title="Siguiente">
 
                 Siguiente
