--- a/empleobusca.com/data/busqueda.html
+++ b/empleobusca.com/data/busqueda.html
@@ -18,6 +18,9 @@
 
   <!-- Si querés, podés ajustar solo márgenes sin romper el look -->
   <style>
+    html { background-color: #F6FBFF; font-size: 62.5%; }
+    body { background: transparent; }
+
     .wrap_busqueda {
       max-width: 1100px;
       margin: 0 auto;
